--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
     background:lightblue;
-    text-align: center;
 
+}
+p {
+    padding: auto;
+    padding-left: 0%;
+    color: red;
+    text-align: center;
 }
